k8s/06-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: docker-app1
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: docker-app1
spec:
  replicas: 5
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          # غيّر ده لصورتك بعد الـ build والـ push
          image: khalednabilsaad/app-frontend
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
